fixed grayscale text output for postscript.  b=45793 r=dcone sr=attinsi a=asa